Update Play Store link to the correct package

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <!-- PLAY STORE LINK -->
     <a
       class="store-link"
-      href="https://play.google.com/store/apps/details?id=YOUR.PACKAGE.NAME"
+      href="https://play.google.com/store/apps/details?id=com.hyperether.fishingfrenzy"
       target="_blank"
       rel="noopener"
     >
