Add secondary button for Open Web App link

--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
       transition: background-color 0.2s ease;
     }
 
+    .btn.secondary {
+      background: transparent;
+      border: 1px solid rgba(255, 255, 255, 0.4);
+    }
+
     .store-link:hover {
       background-color: rgba(255, 255, 255, 0.22);
     }
@@ -107,6 +112,10 @@
       rel="noopener"
     >
       Available on Google Play
+    </a>
+
+    <a class="btn secondary" href="https://www.fiscon.live" target="_blank">
+      Open Web App
     </a>
 
     <!-- FOOTER -->
