--- a/index.html
+++ b/index.html
@@ -2,17 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Fiscon – Fishing Competition Platform</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <!-- Basic SEO / legitimacy -->
-  <meta name="description" content="Fiscon is a digital platform for organizing and tracking fishing competitions." />
+  <title>Fiscon</title>
 
   <style>
     :root {
-      --bg-color: #4e5146;
-      --text-color: #ffffff;
-      --muted-color: #d6d6d0;
+      --bg: #56594c;
+      --text-main: #ffffff;
+      --text-muted: #d6d6d6;
+      --button: #6b6e60;
+      --button-hover: #7a7e6c;
     }
 
     * {
@@ -22,74 +21,86 @@
     }
 
     body {
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, sans-serif;
-      background-color: var(--bg-color);
-      color: var(--text-color);
-      min-height: 100vh;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+        Roboto, Ubuntu, sans-serif;
+      background-color: var(--bg);
+      color: var(--text-main);
+      height: 100vh;
       display: flex;
-      align-items: center;
       justify-content: center;
     }
 
     .container {
+      width: 100%;
+      max-width: 720px;
+      padding: 64px 24px 32px;
       text-align: center;
-      padding: 32px;
-      max-width: 520px;
     }
 
     .logo {
-      width: 140px;
+      width: 84px;
       height: auto;
       margin-bottom: 24px;
     }
 
     h1 {
-      font-size: 32px;
+      font-size: 42px;
       font-weight: 600;
-      margin-bottom: 12px;
-      letter-spacing: 0.3px;
+      margin-bottom: 16px;
     }
 
-    p {
+    .subtitle {
       font-size: 16px;
-      line-height: 1.6;
-      color: var(--muted-color);
-      margin-bottom: 32px;
+      line-height: 1.5;
+      color: var(--text-muted);
+      max-width: 520px;
+      margin: 0 auto 32px;
     }
 
-    .store-link {
-      display: inline-block;
+    .actions {
+      display: flex;
+      justify-content: center;
+      gap: 16px;
+      flex-wrap: wrap;
+      margin-bottom: 48px;
+    }
+
+    .button {
+      background-color: var(--button);
+      color: white;
       padding: 12px 22px;
-      border-radius: 10px;
-      background-color: rgba(255, 255, 255, 0.12);
-      color: #ffffff;
+      border-radius: 8px;
       text-decoration: none;
-      font-size: 15px;
+      font-size: 14px;
       transition: background-color 0.2s ease;
     }
 
-    .btn.secondary {
-      background: transparent;
-      border: 1px solid rgba(255, 255, 255, 0.4);
+    .button:hover {
+      background-color: var(--button-hover);
     }
 
-    .store-link:hover {
-      background-color: rgba(255, 255, 255, 0.22);
+    .link {
+      font-size: 14px;
+      color: var(--text-muted);
+      text-decoration: none;
+    }
+
+    .link:hover {
+      text-decoration: underline;
     }
 
     footer {
-      margin-top: 40px;
-      font-size: 13px;
-      color: rgba(255, 255, 255, 0.5);
+      font-size: 12px;
+      color: #bdbdbd;
     }
   </style>
 </head>
-<body>
 
+<body>
   <div class="container">
     <!-- LOGO -->
     <img
-      src="assets/fiscon-logo.svg"
+      src="assets/logo.svg"
       alt="Fiscon logo"
       class="logo"
     />
@@ -98,31 +109,34 @@
     <h1>Fiscon</h1>
 
     <!-- DESCRIPTION -->
-    <p>
-      Digital platform for organizing and tracking fishing competitions.
-      <br />
-      Focused on transparency, simplicity and real-world usability.
+    <p class="subtitle">
+      Digital platform for organizing and tracking fishing competitions.<br />
+      Focused on transparency, simplicity, and real-world usability.
     </p>
 
-    <!-- PLAY STORE LINK -->
-    <a
-      class="store-link"
-      href="https://play.google.com/store/apps/details?id=com.hyperether.fishingfrenzy"
-      target="_blank"
-      rel="noopener"
-    >
-      Available on Google Play
-    </a>
+    <!-- ACTIONS -->
+    <div class="actions">
+      <a
+        class="button"
+        href="https://play.google.com/store/apps/details?id=com.hyperether.fishingfrenzy"
+        target="_blank"
+      >
+        Available on Google Play
+      </a>
 
-    <a class="btn secondary" href="https://www.fiscon.live" target="_blank">
-      Open Web App
-    </a>
+      <a
+        class="link"
+        href="https://www.fiscon.live"
+        target="_blank"
+      >
+        www.fiscon.live
+      </a>
+    </div>
 
     <!-- FOOTER -->
     <footer>
       © Fiscon Platform
     </footer>
   </div>
-
 </body>
 </html>
