--- a/index.html
+++ b/index.html
@@ -6,82 +6,72 @@
   <title>Fiscon</title>
 
   <style>
-    :root {
-      --bg: #56594c;
-      --text-main: #ffffff;
-      --text-muted: #d6d6d6;
-      --button: #6b6e60;
-      --button-hover: #7a7e6c;
-    }
-
     * {
       box-sizing: border-box;
       margin: 0;
       padding: 0;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, sans-serif;
     }
 
     body {
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-        Roboto, Ubuntu, sans-serif;
-      background-color: var(--bg);
-      color: var(--text-main);
-      height: 100vh;
+      min-height: 100vh;
+      background: linear-gradient(180deg, #5b5f52 0%, #4f5348 100%);
+      color: #ffffff;
       display: flex;
       justify-content: center;
+      align-items: center;
+      text-align: center;
+      padding: 24px;
     }
 
-    .container {
+    .card {
+      max-width: 480px;
       width: 100%;
-      max-width: 720px;
-      padding: 64px 24px 32px;
-      text-align: center;
+      padding: 48px 32px 40px;
+      background: rgba(255, 255, 255, 0.04);
+      border-radius: 18px;
+      backdrop-filter: blur(6px);
     }
 
     .logo {
-      width: 84px;
-      height: auto;
-      margin-bottom: 24px;
+      width: 96px;
+      margin-bottom: 20px;
     }
 
     h1 {
-      font-size: 42px;
-      font-weight: 600;
-      margin-bottom: 16px;
+      font-size: 44px;
+      margin-bottom: 12px;
+      letter-spacing: 0.6px;
     }
 
     .subtitle {
       font-size: 16px;
-      line-height: 1.5;
-      color: var(--text-muted);
-      max-width: 520px;
-      margin: 0 auto 32px;
+      line-height: 1.6;
+      opacity: 0.9;
+      margin-bottom: 32px;
     }
 
-    .actions {
-      display: flex;
-      justify-content: center;
-      gap: 16px;
-      flex-wrap: wrap;
-      margin-bottom: 48px;
-    }
-
-    .button {
-      background-color: var(--button);
-      color: white;
-      padding: 12px 22px;
-      border-radius: 8px;
+    .btn {
+      display: inline-block;
+      padding: 14px 26px;
+      background: rgba(255, 255, 255, 0.18);
+      border-radius: 12px;
+      color: #ffffff;
       text-decoration: none;
-      font-size: 14px;
-      transition: background-color 0.2s ease;
+      font-size: 15px;
+      transition: all 0.2s ease;
     }
 
-    .button:hover {
-      background-color: var(--button-hover);
+    .btn:hover {
+      background: rgba(255, 255, 255, 0.3);
+      transform: translateY(-1px);
     }
 
     .link {
-      font-size: 14px;
-      color: var(--text-muted);
+      display: block;
+      margin-top: 14px;
+      font-size: 15px;
+      color: rgba(255, 255, 255, 0.85);
       text-decoration: none;
     }
 
@@ -90,53 +80,48 @@
     }
 
     footer {
+      margin-top: 36px;
       font-size: 12px;
-      color: #bdbdbd;
+      opacity: 0.55;
     }
   </style>
 </head>
-
 <body>
-  <div class="container">
-    <!-- LOGO -->
-    <img
-      src="assets/logo.svg"
-      alt="Fiscon logo"
-      class="logo"
-    />
 
-    <!-- TITLE -->
+  <div class="card">
+
+    <img src="assets/fiscon-logo.svg" alt="Fiscon logo" class="logo" />
+
     <h1>Fiscon</h1>
 
-    <!-- DESCRIPTION -->
     <p class="subtitle">
       Digital platform for organizing and tracking fishing competitions.<br />
       Focused on transparency, simplicity, and real-world usability.
     </p>
 
-    <!-- ACTIONS -->
-    <div class="actions">
-      <a
-        class="button"
-        href="https://play.google.com/store/apps/details?id=com.hyperether.fishingfrenzy"
-        target="_blank"
-      >
-        Available on Google Play
-      </a>
+    <a
+      class="btn"
+      href="https://play.google.com"
+      target="_blank"
+      rel="noopener noreferrer"
+    >
+      Available on Google Play
+    </a>
 
-      <a
-        class="link"
-        href="https://www.fiscon.live"
-        target="_blank"
-      >
-        www.fiscon.live
-      </a>
-    </div>
+    <a
+      class="link"
+      href="https://www.fiscon.live"
+      target="_blank"
+      rel="noopener noreferrer"
+    >
+      www.fiscon.live
+    </a>
 
-    <!-- FOOTER -->
     <footer>
       © Fiscon Platform
     </footer>
+
   </div>
+
 </body>
 </html>
