--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       color: #ffffff;
       display: flex;
       justify-content: center;
-      align-items: center;
+      align-items: flex-start;
       text-align: center;
       padding: 24px;
     }
@@ -69,7 +69,7 @@
 
     .link {
       display: block;
-      margin-top: 14px;
+      margin-top: 24px;
       font-size: 15px;
       color: rgba(255, 255, 255, 0.85);
       text-decoration: none;
