--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
     <a
       class="btn"
-      href="https://play.google.com"
+      href="https://play.google.com/store/apps/details?id=com.hyperether.fishingfrenzy"
       target="_blank"
       rel="noopener noreferrer"
     >
